--- a/Music/style.css
+++ b/Music/style.css
@@ -23,7 +23,7 @@ body{
   align-items: center;
   justify-content: center;
   min-height: 100vh;
-  background: rgb(32, 23, 53);
+  background: rgb(40, 31, 63);
 }
 .wrapper{
   width: 380px;
@@ -31,8 +31,8 @@ body{
   overflow: hidden;
   position: relative;
   border-radius: 15px;
-  background: rgb(32, 23, 53);
-  box-shadow: 0px 6px 15px grey;
+  background:rgb(40, 31, 63);
+  box-shadow: 0px 6px 15px rgb(40, 31, 63);
 }
 .wrapper i{
   cursor: pointer;
