--- a/Music/style.css
+++ b/Music/style.css
@@ -23,7 +23,7 @@ body{
   align-items: center;
   justify-content: center;
   min-height: 100vh;
-  background: rgb(40, 31, 63);
+  background: rgb(13, 13, 83); 
 }
 .wrapper{
   width: 380px;
@@ -31,7 +31,7 @@ body{
   overflow: hidden;
   position: relative;
   border-radius: 15px;
-  background:rgb(40, 31, 63);
+  background: #423DD6;
   box-shadow: 0px 6px 15px rgb(40, 31, 63);
 }
 .wrapper i{
